Main html structure and some basic css

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 <body>
+  <div id="card">
+    <img id="crystal" src="images/image-equilibrium.jpg" alt="a crystal">
+    <h1>Equilibrium #3429</h1>
 
-  Equilibrium #3429
+    <p>Our Equilibrium collection promotes balance and calm.</p>
 
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+    <p><img src="images/icon-ethereum.svg" alt="">0.041 ETH <img src="images/icon-clock.svg">3 days left</p>
+    
+    <p><img src="images/image-avatar.png" alt="">Creation of Jules Wyvern</p>
+  </div>
 </body>
 </html>
